Alphabetized gitignore, added auto-save-list and secure

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
-.python-environments
-elpa
-ac-comphist.dat
-history
-eshell
 .cache
 .place
+.python-environments
+ac-comphist.dat
+auto-save-list
+elpa
+eshell
+history
+ido.last
+irony
 projectile-bookmarks.eld
 projectile.cache
+secure
 smex-items
-ido.last
-workbench.xmi
-irony
 tags
 undo_hist
+workbench.xmi
